<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="FormViewModel"
            type="com.example.appagenda.viewmodel.FormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FormActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:boxBackgroundMode="filled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:hintTextColor="@color/grey_dark"
            app:boxBackgroundColor="@color/teal_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@={FormViewModel.name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:boxBackgroundMode="filled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:hintTextColor="@color/grey_dark"
            app:boxBackgroundColor="@color/teal_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_form_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:text="@={FormViewModel.surname}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:boxBackgroundMode="filled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_surname"
            app:hintTextColor="@color/grey_dark"
            app:boxBackgroundColor="@color/teal_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:text="@={FormViewModel.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:boxBackgroundMode="filled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:hintTextColor="@color/grey_dark"
            app:boxBackgroundColor="@color/teal_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_form_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone_form"
                android:inputType="phone"
                android:text="@={FormViewModel.telephone}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_200"
            android:layout_margin="24dp"
            android:onClick="@{()->FormViewModel.savePerson()}"/>

        <LinearLayout
            android:id="@+id/ll_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_upd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:backgroundTint="@color/teal_200"
                android:onClick="@{()->FormViewModel.savePerson()}"
                android:text="@string/save"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_dlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/delete"
                android:textColor="@color/black" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>